force-app/main/default/objects/Visita__c/Visita__c.object-meta.xml
<CustomObject>
    <label>Visita</label>
    <nameField>
        <displayFormat>VIS-{0000}</displayFormat>
        <label>Número da Visita</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visitas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>