force-app/main/default/objects/Visita__c/fields/Data_da_Visita__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Visita__c</fullName>
    <description>Data em que a visita ao produtor foi realizada.</description>
    <inlineHelpText>Informe a data em que a visita aconteceu.</inlineHelpText>
    <label>Data da Visita</label>
    <type>Date</type>
</CustomField>