force-app/main/default/objects/Visita__c/fields/Data_do_Pr_ximo_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Data_do_Pr_ximo_Follow_up__c</fullName>
    <description>Data prevista para o próximo contato ou acompanhamento relacionado à visita.</description>
    <inlineHelpText>Informe quando o vendedor ou agrônomo deve realizar o próximo follow-up.</inlineHelpText>
    <label>Data do Próximo Follow-up</label>
    <type>Date</type>
</CustomField>