force-app/main/default/objects/Visita__c/fields/Precisa_de_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Precisa_de_Follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se a visita exige uma ação de acompanhamento posterior.</description>
    <inlineHelpText>Marque esta opção quando for necessário realizar um novo contato ou acompanhamento após a visita.</inlineHelpText>
    <label>Precisa de Follow-up</label>
    <type>Checkbox</type>
</CustomField>