force-app/main/default/objects/Visita__c/fields/Produtor__c.field-meta.xml
<CustomField>
    <fullName>Produtor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Produtor relacionado à visita realizada pelo vendedor ou agrônomo.</description>
    <inlineHelpText>Selecione o produtor atendido nesta visita.</inlineHelpText>
    <label>Produtor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visitas</relationshipLabel>
    <relationshipName>Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>