force-app/main/default/objects/Visita__c/fields/Resultado_da_Visita__c.field-meta.xml
<CustomField>
    <fullName>Resultado_da_Visita__c</fullName>
    <description>Registra o principal resultado obtido na visita ao produtor.</description>
    <inlineHelpText>Selecione o resultado principal da visita realizada.</inlineHelpText>
    <label>Resultado da Visita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sem interesse</fullName>
            </value>
            <value>
                <fullName>Interessado</fullName>
            </value>
            <value>
                <fullName>Solicitou orçamento</fullName>
            </value>
            <value>
                <fullName>Venda realizada</fullName>
            </value>
            <value>
                <fullName>Necessita retorno</fullName>
            </value>
            <value>
                <fullName>Acompanhamento técnico</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>