force-app/main/default/objects/Visita__c/fields/Tipo_da_Visita__c.field-meta.xml
<CustomField>
    <fullName>Tipo_da_Visita__c</fullName>
    <description>Classifica o principal objetivo da visita realizada ao produtor.</description>
    <inlineHelpText>Selecione o motivo principal da visita.</inlineHelpText>
    <label>Tipo da Visita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecção</fullName>
            </value>
            <value>
                <fullName>Acompanhamento</fullName>
            </value>
            <value>
                <fullName>Pós-venda</fullName>
            </value>
            <value>
                <fullName>Técnica</fullName>
            </value>
            <value>
                <fullName>Cobrança</fullName>
            </value>
            <value>
                <fullName>Relacionamento</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>