force-app/main/default/objects/Visita__c/validationRules/Require_Follow_Up_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Follow_Up_Date</fullName>
    <active>true</active>
    <description>Exige o preenchimento da Data do Próximo Follow-up quando a visita estiver marcada como necessitando acompanhamento.</description>
    <errorConditionFormula>AND(
    Precisa_de_Follow_up__c = TRUE,
    ISBLANK(Data_do_Pr_ximo_Follow_up__c)
)</errorConditionFormula>
    <errorDisplayField>Data_do_Pr_ximo_Follow_up__c</errorDisplayField>
    <errorMessage>Informe a Data do Próximo Follow-up quando a visita precisar de acompanhamento.</errorMessage>
</ValidationRule>